# perspective_heart_and_brain_binder

./: LICENSE  README.md  environment.yml  heart_brain_simulation.ipynb  pyproject.toml  requirements.txt
codebase/: FHN_analysis.py  FHN_model.py  FHN_plots.py
